<resources>
    <string name="app_name">tink</string>
    <string name="navigateup">navigateUp</string>
    <string name="search">search</string>
    <string name="hint_search">Поиск</string>
    <string name="error">error</string>
    <string name="text_on_network_error">Произошла ошибка при загрузке данных, проверьте подключение к сети</string>
    <string name="try_again">Повторить</string>
    <string name="image">image</string>
    <string name="is_favorite">is favorite</string>
    <string name="not_found">Не найдено</string>
    <string name="poster">poster</string>
    <string name="genres">Жанры: %1$s</string>
    <string name="countries">Страны: %1$s</string>
    <string name="genre_c">Жанры:</string>
    <string name="country_c">Страны:</string>
    <string name="genre_and_year">%1$s (%2$s)</string>
</resources>